--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Azure connection properties
+azure.storage.account-name=${AZR_ACCNT_NAME}
+azure.storage.account-key=${AZR_ACCNT_KEY}
+
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
